# quant-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEV-LOG.md  LEDGER.md  README.md  checkpoints  ledger.yaml  process  pyproject.toml
.meta-flow/: workspace.yaml
checkpoints/: CHECKPOINT-HLD.md  CP2-CR014-REQUIREMENTS-BASELINE.md  CP2-CR015-CR016-CR017-INTAKE-DECISION-BRIEF.md  CP2-CR018-PRODUCTION-DATA-LAKE-CLOSURE-DECISION-BRIEF.md  CP2-CR019-REQUIREMENTS-BASELINE.md  CP2-CR020-REQUIREMENTS-BASELINE.md  CP2-CR025-REQUIREMENTS-BASELINE.md  CP2-CR030-REQUIREMENTS-BASELINE.md  CP3-CR004-HLD-REVIEW.md  CP3-CR005-HLD-REVIEW.md  CP3-CR006-HLD-REVIEW.md  CP3-CR007-HLD-REVIEW.md  CP3-CR008-HLD-REVIEW.md  CP3-CR010-DATA-LAKE-HLD-REVIEW.md  CP3-CR011-FACTOR-RESEARCH-DATA-COMPLETION-HLD-REVIEW.md  CP3-CR013-UNSUPPORTED-DATA-CLAIM-BOUNDARY-HLD-REVIEW.md  CP3-CR014-A-SHARE-SINCE-INCEPTION-DATA-LAKE-HLD-REVIEW-R2.md  CP3-CR014-A-SHARE-SINCE-INCEPTION-DATA-LAKE-HLD-REVIEW.md  CP3-CR015-CR016-CR017-HLD-REVIEW.md  CP3-CR018-HLD-REVIEW.md  CP3-CR019-HLD-REVIEW.md  CP3-CR020-HLD-REVIEW.md  CP3-CR025-HLD-REVIEW.md  CP3-CR030-HLD-REVIEW.md  CP4-CR004-STORY-PLAN-REVIEW.md  CP4-CR005-STORY-PLAN-REVIEW.md  CP4-CR006-STORY-PLAN-REVIEW.md  CP4-CR007-STORY-PLAN-REVIEW.md  CP4-CR008-STORY-PLAN-REVIEW.md  CP4-CR010-REMAINING-BATCHES-STORY-PLAN-REVIEW.md  CP4-CR010-STORY-PLAN-REVIEW.md  CP5-ALL-STORIES-LLD-BATCH.md  CP5-CR004-BATCH-A-LLD-REVIEW.md  CP5-CR004-BATCH-B-STORY-016-LLD-REVIEW.md  CP5-CR004-BATCH-C-STORY-017-LLD-REVIEW.md  CP5-CR004-BATCH-D-DATALOADER-EXPERIMENT-READONLY-LLD-REVIEW.md  (+38 more)
(+2677 files in other folders)
