[project]
name = "quant-lab"
version = "0.1.0"
description = "Lightweight local daily-frequency backtest research tool."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=15,<17",
    "akshare>=1.14,<2.0",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.8,<4.0",
]

[dependency-groups]
backtrader = [
    "backtrader==1.9.78.123",
]
dev = [
    "pytest>=8,<9",
]
exploration = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mplfinance>=0.12.10b0",
]
jqdata = [
    "jqdatasdk>=1.9,<2.0",
]
ml = [
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
]
tushare = [
    "tushare==1.4.29",
]

[tool.uv]
package = false
